[gd_scene load_steps=6 format=4 uid="uid://bmcw0wxj1er73"]

[ext_resource type="Script" path="res://levels/default/default_level.gd" id="1_4paxb"]
[ext_resource type="TileSet" uid="uid://bmdyj28ichv7b" path="res://assets/tilesets/vectorTDTileSet.tres" id="2_gkb5w"]
[ext_resource type="PackedScene" uid="uid://cawdmj8me57o0" path="res://scenes/strobe_square/strobe_square.tscn" id="3_f1c4k"]

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_n6u17"]
size = Vector2(1150, 850)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_nrtyu"]
size = Vector2(50, 50)

[node name="Map" type="Node2D"]
script = ExtResource("1_4paxb")
starting_money = 9876

[node name="MapArea" type="Sprite2D" parent="."]
position = Vector2(525, 375)
texture = SubResource("PlaceholderTexture2D_n6u17")
metadata/_edit_lock_ = true

[node name="GroundTileMapLayer" type="TileMapLayer" parent="."]
unique_name_in_owner = true
tile_map_data = PackedByteArray("AAD/////BAAAAAAAAAD//wAABAAAAAAAAAD//wEABAAAAAAAAAD//wIABAAAAAAAAAD//wMABAAAAAAAAAD//wQABAAAAAAAAAD//wUABAAAAAAAAAD//wYABAAAAAAAAAD//wcABAAAAAAAAAD//wgABAAAAAAAAAD//wkABAAAAAAAAAD//woABAAAAAAAAAD//wsABAAAAAAAAAD//wwABAAAAAAAAAD//w0ABAAAAAAAAAD//w4ABAAAAAAAAAD//w8ABAAAAAAAAAAAAP//BAAAAAAAAAAAAAAABAAAAAAAAAAAAAEABAAAAAAAAAAAAAIABAAAAAAAAAAAAAMABAAAAAAAAAAAAAQABAAAAAAAAAAAAAUABAAAAAAAAAAAAAYABAAAAAAAAAAAAAcABAAAAAAAAAAAAAgABAAAAAAAAAAAAAkABAAAAAAAAAAAAAoABAAAAAAAAAAAAAsABAAAAAAAAAAAAAwABAAAAAAAAAAAAA0ABAAAAAAAAAAAAA4ABAAAAAAAAAAAAA8ABAAAAAAAAAABAP//BAAAAAAAAAABAAAABAAAAAAAAAABAAEABAAAAAAAAAABAAIABAAAAAAAAAABAAMABAAAAAAAAAABAAQABAAAAAAAAAABAAUABAAAAAAAAAABAAYABAAAAAAAAAABAAcABAAAAAAAAAABAAgABAAAAAAAAAABAAkABAAAAAAAAAABAAoABAAAAAAAAAABAAsABAAAAAAAAAABAAwABAAAAAAAAAABAA0ABAAAAAAAAAABAA4ABAAAAAAAAAABAA8ABAAAAAAAAAACAP//BAAAAAAAAAACAAAABAAAAAAAAAACAAEABAAAAAAAAAACAAIABAAAAAAAAAACAAMABAAAAAAAAAACAAQABAAAAAAAAAACAAUABAAAAAAAAAACAAYABAAAAAAAAAACAAcABAAAAAAAAAACAAgABAAAAAAAAAACAAkABAAAAAAAAAACAAoABAAAAAAAAAACAAsABAAAAAAAAAACAAwABAAAAAAAAAACAA0ABAAAAAAAAAACAA4ABAAAAAAAAAACAA8ABAAAAAAAAAADAP//BAAAAAAAAAADAAAABAAAAAAAAAADAAEABAAAAAAAAAADAAIABAAAAAAAAAADAAMABAAAAAAAAAADAAQABAAAAAAAAAADAAUABAAAAAAAAAADAAYABAAAAAAAAAADAAcABAAAAAAAAAADAAgABAAAAAAAAAADAAkABAAAAAAAAAADAAoABAAAAAAAAAADAAsABAAAAAAAAAADAAwABAAAAAAAAAADAA0ABAAAAAAAAAADAA4ABAAAAAAAAAADAA8ABAAAAAAAAAAEAP//BAAAAAAAAAAEAAAABAAAAAAAAAAEAAEABAAAAAAAAAAEAAIABAAAAAAAAAAEAAMABAAAAAAAAAAEAAQABAAAAAAAAAAEAAUABAAAAAAAAAAEAAYABAAAAAAAAAAEAAcABAAAAAAAAAAEAAgABAAAAAAAAAAEAAkABAAAAAAAAAAEAAoABAAAAAAAAAAEAAsABAAAAAAAAAAEAAwABAAAAAAAAAAEAA0ABAAAAAAAAAAEAA4ABAAAAAAAAAAEAA8ABAAAAAAAAAAFAP//BAAAAAAAAAAFAAAABAAAAAAAAAAFAAEABAAAAAAAAAAFAAIABAAAAAAAAAAFAAMABAAAAAAAAAAFAAQABAAAAAAAAAAFAAUABAAAAAAAAAAFAAYABAAAAAAAAAAFAAcABAAAAAAAAAAFAAgABAAAAAAAAAAFAAkABAAAAAAAAAAFAAoABAAAAAAAAAAFAAsABAAAAAAAAAAFAAwABAAAAAAAAAAFAA0ABAAAAAAAAAAFAA4ABAAAAAAAAAAFAA8ABAAAAAAAAAAGAP//BAAAAAAAAAAGAAAABAAAAAAAAAAGAAEABAAAAAAAAAAGAAIABAAAAAAAAAAGAAMABAAAAAAAAAAGAAQABAAAAAAAAAAGAAUABAAAAAAAAAAGAAYABAAAAAAAAAAGAAcABAAAAAAAAAAGAAgABAAAAAAAAAAGAAkABAAAAAAAAAAGAAoABAAAAAAAAAAGAAsABAAAAAAAAAAGAAwABAAAAAAAAAAGAA0ABAAAAAAAAAAGAA4ABAAAAAAAAAAGAA8ABAAAAAAAAAAHAP//BAAAAAAAAAAHAAAABAAAAAAAAAAHAAEABAAAAAAAAAAHAAIABAAAAAAAAAAHAAMABAAAAAAAAAAHAAQABAAAAAAAAAAHAAUABAAAAAAAAAAHAAYABAAAAAAAAAAHAAcABAAAAAAAAAAHAAgABAAAAAAAAAAHAAkABAAAAAAAAAAHAAoABAAAAAAAAAAHAAsABAAAAAAAAAAHAAwABAAAAAAAAAAHAA0ABAAAAAAAAAAHAA4ABAAAAAAAAAAHAA8ABAAAAAAAAAAIAP//BAAAAAAAAAAIAAAABAAAAAAAAAAIAAEABAAAAAAAAAAIAAIABAAAAAAAAAAIAAMABAAAAAAAAAAIAAQABAAAAAAAAAAIAAUABAAAAAAAAAAIAAYABAAAAAAAAAAIAAcABAAAAAAAAAAIAAgABAAAAAAAAAAIAAkABAAAAAAAAAAIAAoABAAAAAAAAAAIAAsABAAAAAAAAAAIAAwABAAAAAAAAAAIAA0ABAAAAAAAAAAIAA4ABAAAAAAAAAAIAA8ABAAAAAAAAAAJAP//BAAAAAAAAAAJAAAABAAAAAAAAAAJAAEABAAAAAAAAAAJAAIABAAAAAAAAAAJAAMABAAAAAAAAAAJAAQABAAAAAAAAAAJAAUABAAAAAAAAAAJAAYABAAAAAAAAAAJAAcABAAAAAAAAAAJAAgABAAAAAAAAAAJAAkABAAAAAAAAAAJAAoABAAAAAAAAAAJAAsABAAAAAAAAAAJAAwABAAAAAAAAAAJAA0ABAAAAAAAAAAJAA4ABAAAAAAAAAAJAA8ABAAAAAAAAAAKAP//BAAAAAAAAAAKAAAABAAAAAAAAAAKAAEABAAAAAAAAAAKAAIABAAAAAAAAAAKAAMABAAAAAAAAAAKAAQABAAAAAAAAAAKAAUABAAAAAAAAAAKAAYABAAAAAAAAAAKAAcABAAAAAAAAAAKAAgABAAAAAAAAAAKAAkABAAAAAAAAAAKAAoABAAAAAAAAAAKAAsABAAAAAAAAAAKAAwABAAAAAAAAAAKAA0ABAAAAAAAAAAKAA4ABAAAAAAAAAAKAA8ABAAAAAAAAAALAP//BAAAAAAAAAALAAAABAAAAAAAAAALAAEABAAAAAAAAAALAAIABAAAAAAAAAALAAMABAAAAAAAAAALAAQABAAAAAAAAAALAAUABAAAAAAAAAALAAYABAAAAAAAAAALAAcABAAAAAAAAAALAAgABAAAAAAAAAALAAkABAAAAAAAAAALAAoABAAAAAAAAAALAAsABAAAAAAAAAALAAwABAAAAAAAAAALAA0ABAAAAAAAAAALAA4ABAAAAAAAAAALAA8ABAAAAAAAAAAMAP//BAAAAAAAAAAMAAAABAAAAAAAAAAMAAEABAAAAAAAAAAMAAIABAAAAAAAAAAMAAMABAAAAAAAAAAMAAQABAAAAAAAAAAMAAUABAAAAAAAAAAMAAYABAAAAAAAAAAMAAcABAAAAAAAAAAMAAgABAAAAAAAAAAMAAkABAAAAAAAAAAMAAoABAAAAAAAAAAMAAsABAAAAAAAAAAMAAwABAAAAAAAAAAMAA0ABAAAAAAAAAAMAA4ABAAAAAAAAAAMAA8ABAAAAAAAAAANAP//BAAAAAAAAAANAAAABAAAAAAAAAANAAEABAAAAAAAAAANAAIABAAAAAAAAAANAAMABAAAAAAAAAANAAQABAAAAAAAAAANAAUABAAAAAAAAAANAAYABAAAAAAAAAANAAcABAAAAAAAAAANAAgABAAAAAAAAAANAAkABAAAAAAAAAANAAoABAAAAAAAAAANAAsABAAAAAAAAAANAAwABAAAAAAAAAANAA0ABAAAAAAAAAANAA4ABAAAAAAAAAANAA8ABAAAAAAAAAAOAP//BAAAAAAAAAAOAAAABAAAAAAAAAAOAAEABAAAAAAAAAAOAAIABAAAAAAAAAAOAAMABAAAAAAAAAAOAAQABAAAAAAAAAAOAAUABAAAAAAAAAAOAAYABAAAAAAAAAAOAAcABAAAAAAAAAAOAAgABAAAAAAAAAAOAAkABAAAAAAAAAAOAAoABAAAAAAAAAAOAAsABAAAAAAAAAAOAAwABAAAAAAAAAAOAA0ABAAAAAAAAAAOAA4ABAAAAAAAAAAOAA8ABAAAAAAAAAAPAP//BAAAAAAAAAAPAAAABAAAAAAAAAAPAAEABAAAAAAAAAAPAAIABAAAAAAAAAAPAAMABAAAAAAAAAAPAAQABAAAAAAAAAAPAAUABAAAAAAAAAAPAAYABAAAAAAAAAAPAAcABAAAAAAAAAAPAAgABAAAAAAAAAAPAAkABAAAAAAAAAAPAAoABAAAAAAAAAAPAAsABAAAAAAAAAAPAAwABAAAAAAAAAAPAA0ABAAAAAAAAAAPAA4ABAAAAAAAAAAPAA8ABAAAAAAAAAAQAP//BAAAAAAAAAAQAAAABAAAAAAAAAAQAAEABAAAAAAAAAAQAAIABAAAAAAAAAAQAAMABAAAAAAAAAAQAAQABAAAAAAAAAAQAAUABAAAAAAAAAAQAAYABAAAAAAAAAAQAAcABAAAAAAAAAAQAAgABAAAAAAAAAAQAAkABAAAAAAAAAAQAAoABAAAAAAAAAAQAAsABAAAAAAAAAAQAAwABAAAAAAAAAAQAA0ABAAAAAAAAAAQAA4ABAAAAAAAAAAQAA8ABAAAAAAAAAARAP//BAAAAAAAAAARAAAABAAAAAAAAAARAAEABAAAAAAAAAARAAIABAAAAAAAAAARAAMABAAAAAAAAAARAAQABAAAAAAAAAARAAUABAAAAAAAAAARAAYABAAAAAAAAAARAAcABAAAAAAAAAARAAgABAAAAAAAAAARAAkABAAAAAAAAAARAAoABAAAAAAAAAARAAsABAAAAAAAAAARAAwABAAAAAAAAAARAA0ABAAAAAAAAAARAA4ABAAAAAAAAAARAA8ABAAAAAAAAAASAP//BAAAAAAAAAASAAAABAAAAAAAAAASAAEABAAAAAAAAAASAAIABAAAAAAAAAASAAMABAAAAAAAAAASAAQABAAAAAAAAAASAAUABAAAAAAAAAASAAYABAAAAAAAAAASAAcABAAAAAAAAAASAAgABAAAAAAAAAASAAkABAAAAAAAAAASAAoABAAAAAAAAAASAAsABAAAAAAAAAASAAwABAAAAAAAAAASAA0ABAAAAAAAAAASAA4ABAAAAAAAAAASAA8ABAAAAAAAAAATAP//BAAAAAAAAAATAAAABAAAAAAAAAATAAEABAAAAAAAAAATAAIABAAAAAAAAAATAAMABAAAAAAAAAATAAQABAAAAAAAAAATAAUABAAAAAAAAAATAAYABAAAAAAAAAATAAcABAAAAAAAAAATAAgABAAAAAAAAAATAAkABAAAAAAAAAATAAoABAAAAAAAAAATAAsABAAAAAAAAAATAAwABAAAAAAAAAATAA0ABAAAAAAAAAATAA4ABAAAAAAAAAATAA8ABAAAAAAAAAAUAP//BAAAAAAAAAAUAAAABAAAAAAAAAAUAAEABAAAAAAAAAAUAAIABAAAAAAAAAAUAAMABAAAAAAAAAAUAAQABAAAAAAAAAAUAAUABAAAAAAAAAAUAAYABAAAAAAAAAAUAAcABAAAAAAAAAAUAAgABAAAAAAAAAAUAAkABAAAAAAAAAAUAAoABAAAAAAAAAAUAAsABAAAAAAAAAAUAAwABAAAAAAAAAAUAA0ABAAAAAAAAAAUAA4ABAAAAAAAAAAUAA8ABAAAAAAAAAAVAP//BAAAAAAAAAAVAAAABAAAAAAAAAAVAAEABAAAAAAAAAAVAAIABAAAAAAAAAAVAAMABAAAAAAAAAAVAAQABAAAAAAAAAAVAAUABAAAAAAAAAAVAAYABAAAAAAAAAAVAAcABAAAAAAAAAAVAAgABAAAAAAAAAAVAAkABAAAAAAAAAAVAAoABAAAAAAAAAAVAAsABAAAAAAAAAAVAAwABAAAAAAAAAAVAA0ABAAAAAAAAAAVAA4ABAAAAAAAAAAVAA8ABAAAAAAAAAA=")
tile_set = ExtResource("2_gkb5w")

[node name="WallsTileMapLayer" type="TileMapLayer" parent="."]
unique_name_in_owner = true
tile_map_data = PackedByteArray("AAD/////AgAAAAAAAAAAAP//AgAAAAAAAAABAP//AgAAAAAAAAACAP//AgAAAAAAAAADAP//AgAAAAAAAAAEAP//AgAAAAAAAAAFAP//AgAAAAAAAAAGAP//AgAAAAAAAAAHAP//AgAAAAAAAAAIAP//AgAAAAAAAAAJAP//AgAAAAAAAAAKAP//AgAAAAAAAAALAP//AgAAAAAAAAAMAP//AgAAAAAAAAANAP//AgAAAAAAAAAOAP//AgAAAAAAAAAPAP//AgAAAAAAAAAQAP//AgAAAAAAAAARAP//AgAAAAAAAAASAP//AgAAAAAAAAATAP//AgAAAAAAAAAUAP//AgAAAAAAAAAVAP//AgAAAAAAAAD//wAAAgAAAAAAAAD//wEAAgAAAAAAAAD//wMAAgAAAAAAAAD//wUAAgAAAAAAAAD//wYAAgAAAAAAAAD//wcAAgAAAAAAAAD//wgAAgAAAAAAAAD//wkAAgAAAAAAAAD//woAAgAAAAAAAAD//wsAAgAAAAAAAAD//wwAAgAAAAAAAAD//w0AAgAAAAAAAAD//w4AAgAAAAAAAAD//w8AAgAAAAAAAAAAAA8AAgAAAAAAAAABAA8AAgAAAAAAAAACAA8AAgAAAAAAAAADAA8AAgAAAAAAAAAEAA8AAgAAAAAAAAAFAA8AAgAAAAAAAAAGAA8AAgAAAAAAAAAHAA8AAgAAAAAAAAAIAA8AAgAAAAAAAAAJAA8AAgAAAAAAAAAKAA8AAgAAAAAAAAALAA8AAgAAAAAAAAAMAA8AAgAAAAAAAAANAA8AAgAAAAAAAAAOAA8AAgAAAAAAAAAPAA8AAgAAAAAAAAAQAA8AAgAAAAAAAAASAA8AAgAAAAAAAAAUAA8AAgAAAAAAAAAVAA8AAgAAAAAAAAAVAAAAAgAAAAAAAAAVAAEAAgAAAAAAAAAVAAIAAgAAAAAAAAAVAAMAAgAAAAAAAAAVAAQAAgAAAAAAAAAVAAUAAgAAAAAAAAAVAAYAAgAAAAAAAAAVAAcAAgAAAAAAAAAVAAgAAgAAAAAAAAAVAAkAAgAAAAAAAAAVAAoAAgAAAAAAAAAVAAsAAgAAAAAAAAAVAAwAAgAAAAAAAAAVAA0AAgAAAAAAAAAVAA4AAgAAAAAAAAAAAAAAAgAAAAAAAAAAAAEAAgAAAAAAAAAAAAMAAgAAAAAAAAAAAAUAAgAAAAAAAAAAAAYAAgAAAAAAAAAAAAcAAgAAAAAAAAAAAAgAAgAAAAAAAAAAAAkAAgAAAAAAAAAAAAoAAgAAAAAAAAAAAAsAAgAAAAAAAAAAAAwAAgAAAAAAAAAAAA0AAgAAAAAAAAAAAA4AAgAAAAAAAAABAAAAAgAAAAAAAAACAAAAAgAAAAAAAAADAAAAAgAAAAAAAAAEAAAAAgAAAAAAAAAFAAAAAgAAAAAAAAAGAAAAAgAAAAAAAAAHAAAAAgAAAAAAAAAOAAAAAgAAAAAAAAAPAAAAAgAAAAAAAAAQAAAAAgAAAAAAAAARAAAAAgAAAAAAAAASAAAAAgAAAAAAAAATAAAAAgAAAAAAAAAUAAAAAgAAAAAAAAASAA0AAgAAAAAAAAASAA4AAgAAAAAAAAAUAA0AAgAAAAAAAAAUAA4AAgAAAAAAAAAQAA0AAgAAAAAAAAAQAA4AAgAAAAAAAAABAA0AAgAAAAAAAAABAA4AAgAAAAAAAAACAA0AAgAAAAAAAAACAA4AAgAAAAAAAAADAA0AAgAAAAAAAAADAA4AAgAAAAAAAAAEAA0AAgAAAAAAAAAEAA4AAgAAAAAAAAAFAA0AAgAAAAAAAAAFAA4AAgAAAAAAAAAGAA0AAgAAAAAAAAAGAA4AAgAAAAAAAAAHAA0AAgAAAAAAAAAHAA4AAgAAAAAAAAAIAA0AAgAAAAAAAAAIAA4AAgAAAAAAAAAJAA0AAgAAAAAAAAAJAA4AAgAAAAAAAAAKAA0AAgAAAAAAAAAKAA4AAgAAAAAAAAALAA0AAgAAAAAAAAALAA4AAgAAAAAAAAAMAA0AAgAAAAAAAAAMAA4AAgAAAAAAAAANAA0AAgAAAAAAAAANAA4AAgAAAAAAAAAOAA0AAgAAAAAAAAAOAA4AAgAAAAAAAAAPAA0AAgAAAAAAAAAPAA4AAgAAAAAAAAD//wQAAgAAAAAAAAAAAAQAAgAAAAAAAAD//wIAAgAAAAAAAAAAAAIAAgAAAAAAAAATAA0AAgAAAAAAAAATAA4AAgAAAAAAAAATAA8AAgAAAAAAAAARAA0AAgAAAAAAAAARAA4AAgAAAAAAAAARAA8AAgAAAAAAAAABAAEAAgAAAAAAAAABAAIAAgAAAAAAAAABAAMAAgAAAAAAAAABAAQAAgAAAAAAAAABAAUAAgAAAAAAAAABAAYAAgAAAAAAAAABAAcAAgAAAAAAAAABAAgAAgAAAAAAAAABAAkAAgAAAAAAAAABAAoAAgAAAAAAAAABAAsAAgAAAAAAAAABAAwAAgAAAAAAAAACAAEAAgAAAAAAAAACAAwAAgAAAAAAAAADAAEAAgAAAAAAAAADAAwAAgAAAAAAAAAEAAEAAgAAAAAAAAAEAAwAAgAAAAAAAAAFAAEAAgAAAAAAAAAFAAwAAgAAAAAAAAAGAAEAAgAAAAAAAAAGAAwAAgAAAAAAAAAHAAEAAgAAAAAAAAAHAAwAAgAAAAAAAAAIAAwAAgAAAAAAAAAJAAwAAgAAAAAAAAAKAAEAAgAAAAAAAAAKAAwAAgAAAAAAAAALAAEAAgAAAAAAAAALAAwAAgAAAAAAAAAMAAEAAgAAAAAAAAAMAAwAAgAAAAAAAAANAAwAAgAAAAAAAAAOAAEAAgAAAAAAAAAOAAwAAgAAAAAAAAAPAAEAAgAAAAAAAAAPAAwAAgAAAAAAAAAQAAEAAgAAAAAAAAAQAAwAAgAAAAAAAAARAAEAAgAAAAAAAAARAAwAAgAAAAAAAAASAAEAAgAAAAAAAAASAAwAAgAAAAAAAAATAAEAAgAAAAAAAAATAAwAAgAAAAAAAAAUAAEAAgAAAAAAAAAUAAIAAgAAAAAAAAAUAAMAAgAAAAAAAAAUAAQAAgAAAAAAAAAUAAUAAgAAAAAAAAAUAAYAAgAAAAAAAAAUAAcAAgAAAAAAAAAUAAgAAgAAAAAAAAAUAAkAAgAAAAAAAAAUAAoAAgAAAAAAAAAUAAsAAgAAAAAAAAAUAAwAAgAAAAAAAAAKAAMAAgAAAAAAAAAKAAQAAgAAAAAAAAAKAAUAAgAAAAAAAAAKAAYAAgAAAAAAAAAKAAcAAgAAAAAAAAAKAAgAAgAAAAAAAAAKAAkAAgAAAAAAAAAKAAoAAgAAAAAAAAAKAAsAAgAAAAAAAAACAAcAAgAAAAAAAAADAAcAAgAAAAAAAAAEAAcAAgAAAAAAAAAFAAcAAgAAAAAAAAAGAAcAAgAAAAAAAAAHAAcAAgAAAAAAAAAIAAcAAgAAAAAAAAAJAAcAAgAAAAAAAAALAAcAAgAAAAAAAAAMAAcAAgAAAAAAAAANAAcAAgAAAAAAAAAOAAcAAgAAAAAAAAAPAAcAAgAAAAAAAAAQAAcAAgAAAAAAAAARAAcAAgAAAAAAAAASAAcAAgAAAAAAAAATAAcAAgAAAAAAAAALAAMAAgAAAAAAAAALAAQAAgAAAAAAAAALAAUAAgAAAAAAAAALAAYAAgAAAAAAAAALAAgAAgAAAAAAAAALAAkAAgAAAAAAAAALAAoAAgAAAAAAAAALAAsAAgAAAAAAAAAMAAUAAgAAAAAAAAANAAUAAgAAAAAAAAAOAAUAAgAAAAAAAAAPAAUAAgAAAAAAAAAQAAUAAgAAAAAAAAARAAUAAgAAAAAAAAASAAUAAgAAAAAAAAATAAUAAgAAAAAAAAATAAMAAgAAAAAAAAASAAMAAgAAAAAAAAARAAMAAgAAAAAAAAAQAAMAAgAAAAAAAAAPAAMAAgAAAAAAAAAOAAMAAgAAAAAAAAAMAAMAAgAAAAAAAAAMAAQAAgAAAAAAAAAOAAIAAgAAAAAAAAAPAAIAAgAAAAAAAAAQAAIAAgAAAAAAAAARAAIAAgAAAAAAAAASAAIAAgAAAAAAAAATAAIAAgAAAAAAAAAMAAIAAgAAAAAAAAALAAIAAgAAAAAAAAAKAAIAAgAAAAAAAAAIAAAAAgAAAAAAAAAIAAEAAgAAAAAAAAA=")
tile_set = ExtResource("2_gkb5w")

[node name="Paths" type="Node2D" parent="."]

[node name="StartGroup1" parent="Paths" instance=ExtResource("3_f1c4k")]
unique_name_in_owner = true
position = Vector2(125, 125)

[node name="EndGroup1" parent="Paths" instance=ExtResource("3_f1c4k")]
unique_name_in_owner = true
position = Vector2(975, 225)
default_animation_name = "red_grow"

[node name="KillZone" type="Area2D" parent="Paths/EndGroup1"]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Paths/EndGroup1/KillZone"]
shape = SubResource("RectangleShape2D_nrtyu")

[node name="StartGroup2" parent="Paths" instance=ExtResource("3_f1c4k")]
unique_name_in_owner = true
position = Vector2(125, 425)

[node name="EndGroup2" parent="Paths" instance=ExtResource("3_f1c4k")]
unique_name_in_owner = true
position = Vector2(475, 425)
default_animation_name = "red_grow"

[node name="KillZone" type="Area2D" parent="Paths/EndGroup2"]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Paths/EndGroup2/KillZone"]
shape = SubResource("RectangleShape2D_nrtyu")

[node name="StartGroup3" parent="Paths" instance=ExtResource("3_f1c4k")]
unique_name_in_owner = true
position = Vector2(625, 325)

[node name="EndGroup3" parent="Paths" instance=ExtResource("3_f1c4k")]
unique_name_in_owner = true
position = Vector2(975, 325)
default_animation_name = "red_grow"

[node name="KillZone" type="Area2D" parent="Paths/EndGroup3"]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Paths/EndGroup3/KillZone"]
shape = SubResource("RectangleShape2D_nrtyu")

[node name="StartGroup4" parent="Paths" instance=ExtResource("3_f1c4k")]
unique_name_in_owner = true
position = Vector2(625, 425)

[node name="EndGroup4" parent="Paths" instance=ExtResource("3_f1c4k")]
unique_name_in_owner = true
position = Vector2(975, 425)
default_animation_name = "red_grow"

[node name="KillZone" type="Area2D" parent="Paths/EndGroup4"]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Paths/EndGroup4/KillZone"]
shape = SubResource("RectangleShape2D_nrtyu")
